--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start-rest": "node rest/server.js",
+    "start-graphql": "node graphql/server.js",
+    "test-rest-controller": "mocha rest/test/controller/**/*.test.js --timeout 10000"
   },
   "repository": {
     "type": "git",
