--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-rest": "node rest/server.js",
     "start-graphql": "node graphql/server.js",
-    "test-rest-controller": "mocha rest/test/controller/**/*.test.js --timeout 10000"
+    "test-rest-controller": "mocha rest/test/controller/**/*.test.js --timeout 10000",
+    "test-rest-external": "mocha rest/test/external/**/*.test.js --timeout 10000"
   },
   "repository": {
     "type": "git",
