Adicionando todos os testes external do graphql e ajustando a pipeline

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -26,10 +26,16 @@ jobs:
       run: npm run test-rest-controller
 
     - name: Subir a API rest
-      run: start-rest &
+      run: npm run start-rest &
+
+    - name: Subir a API GraphQL 
+      run: npm run start-graphql &
 
     - name: Esperar a API estar Funcionando
-      run: sleep 5
+      run: sleep 8
 
-    # - name: Rodar os testes de API via HTTP
-    #   run: npm run test-rest-external
+    - name: Rodar os testes External de API REST via HTTP
+      run: npm run test-rest-external
+
+    - name: Rodar os testes External de API GraphQL via HTTP
+      run: npm run test-graphql-external
