--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start-rest": "node rest/server.js",
     "start-graphql": "node graphql/server.js",
     "test-rest-controller": "mocha rest/test/controller/**/*.test.js --timeout 10000",
-    "test-rest-external": "mocha rest/test/external/**/*.test.js --timeout 10000"
+    "test-rest-external": "mocha rest/test/external/**/*.test.js --timeout 10000",
+    "test-graphql-external": "mocha graphql/test/external/**/*.test.js --timeout 10000"
   },
   "repository": {
     "type": "git",
